Adding html and css of the Google Project

--- a/google-hp.html
+++ b/google-hp.html
@@ -1,5 +1,5 @@
 <html>
-    <link href="google.css"rel="stylesheet">
+    <link href="google-hp.css"rel="stylesheet">
 
     <header>
         <div id="rightnav">
