Add htm and css of the Google Project

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-    <link href="google-hp.css"rel="stylesheet">
+    <link href="index.css"rel="stylesheet">
 
     <header>
         <div id="rightnav">
