--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
 <html>
-    <link href="index.css"rel="stylesheet">
-
     <header>
         <div id="rightnav">
             <div>
@@ -26,10 +24,12 @@
             <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
         </div>
         <div id="search">
+            <img id="lens" src="https://cdn3.iconfinder.com/data/icons/search-engine-optimization-seo-3/320/loupe_magnifier_magnifying_search-512.png">
             <input id="searchform" type="text" placeholder="">
+        <img id="micr"  src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/Google_mic.svg/1200px-Google_mic.svg.png">
         </div>
         <div id="butt">
-            <input class="buttons" type="submit" value="Cera con Google">
+            <input class="buttons" type="submit" value="Cerca con Google">
             <input class="buttons" type="submit" value="Mi sento fortunato">
         </div>   
     </main>
